--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
   },
